# datasette-chronicle

./: README.md  pyproject.toml
.github/workflows/: test.yml
datasette_chronicle/: __init__.py
datasette_chronicle/static/: datasette_chronicle.js
datasette_chronicle/templates/: disable-chronicle.html  enable-chronicle.html
tests/: test_chronicle.py
